loopfor.LoopCourse.scala.error
Erreur de compilation :
LoopCourse:2: error: '<-' expected but ')' found.
  for (cot?<- 1 to 4) {
                    ^LoopCourse:8: error: illegal start of simple expression
} 
^